--- a/src/Contact.css
+++ b/src/Contact.css
@@ -1,45 +1,9 @@
-.contact-container{
+.contact-wrapper{
     position: relative;
     height: 100vh;
+    width: 90%;
     display: flex;
     align-items: center;
-}
-.contact-heading{
-    text-align: center;
-}
-.contact-content{
-    display: grid;
-    grid-template-rows: 1fr 4fr;
+    justify-content: center;
     margin: 0 auto;
-    width: fit-content;
-    text-align: center;
-    position: sticky;
-    top: 30px;
-}
-.contact-form{
-    display: grid;
-    grid-template-rows: repeat(5 1fr);
-}
-.contact-form input, .contact-form textarea, .contact-form button, .download-resume-link{
-    width: 100%;
-    border: none;
-    border-radius: 5px;
-    margin: 5px;
-    padding: 5px;
-    font-size: 10px;
-    background-color: rgb(213, 235, 200);
-}
-
-.contact-background{
-    width: 100%;
-    height: 100vh;
-    background-color: rgb(183, 185, 140);
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: -100;
-}
-
-@media (min-width:768px){
-
-}
+}   
