--- a/src/ContactForm.css
+++ b/src/ContactForm.css
@@ -1,19 +1,75 @@
-.ContactViewWrap{
-    display: flex;
-    flex-flow: column;
-    align-items: center;
-    justify-content: center;
-    margin-top: 100px;
+.contactForm-wrapper{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
 }
-.formContainer{
-    width: 60%;
-    display: flex;
-    flex-flow: column;
-    margin: 0 auto;
-    height: 100vh;
-}
-.formContainer input{
-    margin-top: 10px;
-    margin-bottom: 10px;
 
+
+/* Contact Form -- Text Area */
+.contact-textContainer{
+    display: flex;
+    flex-flow: column;
+    justify-content: center;
+    align-items: flex-start;
+    padding: 20px;
+}
+.contactForm-heading{
+    font-size: 20px;
+    text-align: left;
+    margin: 0;
+    padding-top: 10px;
+    padding-bottom: 20px;
+}
+.contactForm-text{
+    text-align: left;
+    margin: 0;
+}
+
+
+/* Contact Form -- Form Area */
+.contactForm-formContainer{
+    display: flex;
+    flex-flow: column;
+    padding: 20px;
+    text-align: start;
+}
+.contactForm-label{
+    display: block;
+    padding: 10px;
+    padding-bottom: 2px;
+}
+.contactForm-input{
+    display: block;
+    margin: 10px;
+    padding: 8px;
+    border: none;
+    border-bottom: 0.9px solid rgba(181, 181, 181, 0.9);
+    background: rgb(236, 236, 236);
+    border-top-left-radius: 3px 3px;
+    border-top-right-radius: 3px 3px;
+}
+.contactForm-input:focus{
+    outline: none;
+}
+.contactForm-submit-button{
+    width: 50%;
+    border: none;
+    background-color: rgb(239, 164, 72);
+    border-radius: 3px;
+    font-family: 'Lato', sans-serif;
+}
+.contactForm-submit-button:hover{
+    box-shadow: 0 0 1px 1px rgb(155, 223, 255),
+        0 0 1px 2px rgb(221, 169, 255)
+}
+.contactForm-input-textArea{
+    height: 100px;
+    justify-content: start;
+}
+
+@media (max-width:768px){
+    .contactForm-wrapper{
+        grid-template-columns: none;
+        grid-template-rows: 1fr 1fr;
+        height: 80%;
+    }
 }
