--- a/src/About.css
+++ b/src/About.css
@@ -6,33 +6,51 @@
     grid-template-columns: 1fr 1fr;
     height: 100vh;
     width: 100vw;
-    background: rgba(255, 255, 255, 0.65);
+    background: linear-gradient(0.25turn, #808080, rgb(204, 204, 204));
 }
 .about-intro{
-    display: flex;
+    display: grid;
+    grid-template-rows: 1fr 2fr;
     justify-content: left;
-    flex-flow: column;
+    align-items: center;
 }
 .about-intro-text-wrapper{
     margin: 0;
-    height: 20%;
+    text-align: left;
+    margin-left: 150px;
+    padding: 10px;
 }
+
+.intro-address{
+    font-size: 50px;
+    font-weight: 900;
+    text-align: left;
+}
+.typical{
+    font-size: 25px;
+}
+
 .about-intro-navigation{
     margin: 0;
+    margin-left: 150px;
     text-align: left;
     padding: 10px;
 }
 .about-intro-navigation-link{
-    margin: 20px;
-    width: fit-content;
+    font-size: 35px;
+    /* width: fit-content; */
     display: block;
     cursor: pointer;
     text-decoration: none;
     text-align: left;
-    padding: 2px;
-    padding-bottom: 5px;
-    transition: all 0.3s ease;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    transition: all 0.2s ease-in;
 }
+/* .about-intro-navigation-link .fas{
+    padding-top: 20px;
+    padding-bottom: 20px;
+} */
 /* .about-intro-navigation-link::before{
     content: '';
     color: black;
@@ -40,9 +58,7 @@
     height: 100%;
 } */
 .about-intro-navigation-link:hover{
-    border-bottom: 0.5px solid red;
-
-
+    color: rgb(255, 219, 140);
 }
 
 
@@ -60,10 +76,36 @@
     color: rgb(0, 0, 0);
 }
 
+.about-animation-container{
+    margin-top: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+/* .about-background{
+    width: 100%;
+    height: 100vh;
+    background-color: rgb(237, 187, 187);
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -100;
+} */
+
+
 @media (max-width:768px){
     .about-container{
         grid-template-columns: none;
         grid-template-rows: 1fr 1fr;
+    }
+    .about-intro-navigation{
+        margin-left: 20px;
+    }
+    .about-intro-navigation-link{
+        font-size: 30px;
+    }
+    .about-intro-text-wrapper{
+        margin-left: 20px;
     }
 }
 
