--- a/src/AboutAnimate.css
+++ b/src/AboutAnimate.css
@@ -1,7 +1,7 @@
 .AnimationContainer{
     width: 100%;
     overflow: hidden;
-    height: 100vh;
+    height: calc(100vh - 100px);
     /* opacity: 0.7; */
 }
 
