--- a/src/About.css
+++ b/src/About.css
@@ -25,9 +25,20 @@
     font-size: 50px;
     font-weight: 900;
     text-align: left;
+
 }
 .typical{
     font-size: 25px;
+}
+.intro-instruction{
+    padding-top: 20px;
+}
+.intro-instruction-text{
+    font-size: 20px;
+}
+.intro-arrow{
+    text-align: center;
+    font-size: 30px;
 }
 
 .about-intro-navigation{
@@ -47,16 +58,7 @@
     padding-bottom: 20px;
     transition: all 0.2s ease-in;
 }
-/* .about-intro-navigation-link .fas{
-    padding-top: 20px;
-    padding-bottom: 20px;
-} */
-/* .about-intro-navigation-link::before{
-    content: '';
-    color: black;
-    width: 2px;
-    height: 100%;
-} */
+
 .about-intro-navigation-link:hover{
     color: rgb(255, 219, 140);
 }
@@ -82,21 +84,13 @@
     justify-content: center;
     align-items: center;
 }
-/* .about-background{
-    width: 100%;
-    height: 100vh;
-    background-color: rgb(237, 187, 187);
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: -100;
-} */
+
 
 
 @media (max-width:768px){
     .about-container{
         grid-template-columns: none;
-        grid-template-rows: 1fr 1fr;
+        grid-template-rows: 1fr;
     }
     .about-intro-navigation{
         margin-left: 20px;
@@ -106,6 +100,9 @@
     }
     .about-intro-text-wrapper{
         margin-left: 20px;
+    }
+    .about-animation-container{
+        display: none;
     }
 }
 
