--- a/src/About.css
+++ b/src/About.css
@@ -6,11 +6,11 @@
     grid-template-columns: 1fr 1fr;
     height: 100vh;
     width: 100vw;
-    background: linear-gradient(0.25turn, #808080, rgb(204, 204, 204));
+    /* background: linear-gradient(0.25turn, #808080, rgb(204, 204, 204)); */
 }
 .about-intro{
     display: grid;
-    grid-template-rows: 1fr 2fr;
+    grid-template-rows: 1fr 1fr;
     justify-content: left;
     align-items: center;
 }
