--- a/src/Footer.css
+++ b/src/Footer.css
@@ -3,22 +3,34 @@
     bottom: 0;
     z-index: 9999;
     width: 100%;
-    background: rgb(238, 238, 238);
+    display: grid;
+    grid-template-columns: 1fr 3fr;
+    align-items: center;
+    justify-items: right;
+    background-color: rgb(255, 255, 255);
 }
 
 .footer-link{
     color: gray;
-    font-size: 20px;
+    font-size: 30px;
     margin: 10px;
 }
-#footer-credentials{
-    display: inline;
-    font-size: 10px;
-    color: gray;
-}
 .footer-credentials{
-    display: inline;
+    text-align: left;
+    font-size: 15px;
+    color: gray;
+    margin-right: 100px;
 }
-#footer-nav{
-    display: inline;
-} 
+.footer-nav{
+    margin-right: 200px;
+}
+
+
+@media (max-width:768px){
+    .footer-credentials{
+        display: none;
+    }
+    .footer-wrapper{
+        justify-items: center;
+    }
+}
