--- a/src/Footer.css
+++ b/src/Footer.css
@@ -31,6 +31,8 @@
         display: none;
     }
     .footer-wrapper{
+        display: flex;
         justify-items: center;
+        align-items: center;
     }
 }
