--- a/src/Profile.css
+++ b/src/Profile.css
@@ -1,4 +1,3 @@
-
 .profile-container{
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -7,7 +6,7 @@
 .profile-section-container{
     display: flex;
     flex-flow: column;
-    align-items: left;
+    /* align-items: left; */
     justify-content: center;
     width: 50vw;
     height: 100vh;
@@ -43,10 +42,14 @@
     grid-template-columns: 1fr 1fr 1fr;
 }
 .profile-skills-list-items{
+    text-align: center;
     margin: 3px;
     padding: 10px;
     background-color: rgb(236, 234, 234);
     border-radius: 3px;
+}
+.profile-skills-list-items:hover{
+    background-color: rgba(254, 177, 82, 0.9);
 }
 .profile-skills-icons-wrapper{
     display: flex;
@@ -59,7 +62,7 @@
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-gap: 5px;
-    justify-content: center;
+    justify-items: center;
     align-items: center;
 }
 .skill-icon-wrapper{
@@ -72,14 +75,8 @@
 }
 .leng-icon:hover{
     transform: scale(1.1);
-    color: rgb(0, 0, 0);
-    text-shadow: 1px 1px 2px rgb(98, 110, 115);
+    color: rgb(136, 136, 136);
 }
-
-
-
-
-
 
 @media (max-width:768px){
     .profile-container{
