Mobile view fixed

--- a/src/ContactForm.css
+++ b/src/ContactForm.css
@@ -135,6 +135,7 @@
     .contactForm-formContainer{
         padding: 10px;
         margin-right: 0;
+        margin-bottom: 50px;
     }
     .contactForm-label{
         font-size: 18px;
