--- a/src/Portfolio.css
+++ b/src/Portfolio.css
@@ -6,6 +6,9 @@
     height: 100vh;
     width: 100vw; 
 }
+.portfolio-text-wrapper-bounce{
+    margin-top: 60px;
+}
 .portfolio-text-wrapper{
     margin: 0;
     text-align: left;
@@ -122,7 +125,7 @@
 .carousel .slide{
     background-color: white;
 }
-.portfolio-mobile-view{
+.portfolio-mobile-view-bounce{
     display: none;
 }
 
@@ -143,13 +146,13 @@
         align-items: baseline;
         grid-gap: 0;
     }
-    .portfolio-mobile-view{
+    .portfolio-mobile-view-bounce{
         display: flex;
         flex-flow: column;
         align-items: center;        
         width: 100vw;
     }
-    .portfolio-grid{
+    .portfolio-grid-bounce{
         display: none;
     }
 }
