experience and education page added

--- a/src/Education.css
+++ b/src/Education.css
@@ -1,62 +1,57 @@
+*{
+    box-sizing: border-box;
+}
 .education-container{
-    position: relative;
     height: 100vh;
-    display: flex;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
     align-items: center;
 }
-.resume-education-heading{
-    text-align: center;
+.education-text-left-container{
+    width: 100%;
+    display: flex;
+    flex-flow: column;
+    margin-left: 150px;
 }
-.resume-education{
-    display: grid;
-    margin: 0 auto;
-    width: 60%;
-    text-align: left;
-    height: fit-content;
-}
-.resume-edu-ga, .resume-edu-udemy, .resume-edu-gu{
-    display: grid;
-    grid-template-columns: 2fr 1fr 2fr;
-    margin-bottom: 10px;
-
-}
-.resume-text{
+.education-heading{
     margin: 0;
-    font-size: 10px;
-    text-align: justify;
+    font-size: 40px;
+    padding: 20px;
 }
-.resume-internal-heading{
+.education-title-wrapper{
+    padding: 20px;  
+}
+.education-title-container{
+    padding-top: 20px;  
+}
+.education-title-text{
     margin: 0;
+    padding-top: 20px;
+    font-size: 18px;
+    color: rgb(73, 73, 73);
 }
-.res-edu-gu-symbol, .res-edu-udemy-symbol, .res-edu-ga-symbol{
-    text-align: center;
+.education-text{
+    margin: 0;
+    padding-top: 20px;
     font-size: 20px;
 }
-.education-background{
-    width: 100%;
-    height: 100vh;
-    background-color: rgb(237, 187, 187);
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: -100;
-}
-.edu-icon{
-    font-size: 25px;
-    color: rgb(90, 120, 255);
-    transition: all 0.3s ease-in-out;
-    text-align: center;
-}
-.edu-icon:hover{
-    transform: scale(1.1);
-    color: rgb(250, 24, 80);
-    text-shadow: 1px 1px 2px rgb(116, 99, 101);
+.education-sub-heading{
+    margin: 0;
+    padding-top: 20px;
+    font-size: 20px;
 }
 
+
+
+.education-description-right-wrapper{
+    border: 1px solid rgba(254, 177, 82, 0.9);
+    border-radius: 10px;
+    padding: 20px;
+    margin-top: 50px;
+    margin-right: 100px;
+}
 
 @media (max-width:768px){
-    .resume-edu-ga, .resume-edu-udemy, .resume-edu-gu{
-        grid-template-columns: none;
-        grid-template-rows: 2fr 1fr 2fr;
-    }
+    
 }
+
