--- a/src/Profile.css
+++ b/src/Profile.css
@@ -26,6 +26,10 @@
     padding-top: 20px;
     padding-bottom: 20px;
 }
+.profile-text p{
+    margin: 0;
+}
+
 .profile-links{
     margin: 0;
     display: block;    
