--- a/src/Experience.css
+++ b/src/Experience.css
@@ -52,6 +52,24 @@
 }
 
 @media (max-width:768px){
-    
+    .experience-container{
+        padding-top: 30px;
+        grid-template-columns: none;
+        grid-template-rows: 1fr 1fr;
+    }
+    .experience-heading{
+        padding: 0;
+        padding-top: 30px;
+    }
+    .experience-text-left-container{
+        margin-left: 20px;
+    } 
+    .experience-description-right-wrapper{
+        margin-left: 10px;
+        margin-right: 10px;
+    }
+    .experience-title-wrapper{
+        padding: 0;  
+    }
 }
 
