--- a/src/Header.css
+++ b/src/Header.css
@@ -12,7 +12,7 @@
     position: fixed;
     width: 100%;
     display: grid;
-    grid-template-columns: 2fr 1fr;
+    grid-template-columns: 1fr 1fr;
     background-color: rgb(255, 255, 255);
     /* background: linear-gradient(0.25turn, #808080, rgb(204, 204, 204)); */
     z-index: 999;
@@ -38,6 +38,157 @@
 }
 #main-header-nav a:focus{
     outline: none;
+}
+.menu-wrap{
+    display: none;
+}
+.header-hamburger-menu{
+    border: none;
+    background: transparent;
+    cursor: pointer;
+    display: none;
+}
+.header-hamburger-menu:focus{
+    outline: none;
+}
+
+
+@media (max-width: 768px){
+
+    .menu-wrap{
+        display: block;
+        position: fixed;
+        top: 10px;
+        right: 10px;
+    }
+    .menu-wrap .toggler{
+        position: absolute;
+        top: 10px;
+        right: 10px;
+        z-index: 9999;
+        cursor: pointer;
+        width: 23px;
+        height: 23px;
+        opacity: 0;
+    }
+    
+    .menu-wrap .hamburger{
+        position: absolute;
+        top: 0;
+        right: 5px;
+        z-index: 9997;
+        height: 25px;
+        width: 25px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    
+    .menu-wrap .hamburger > div{
+        position: relative;
+        flex: none;
+        width: 100%;
+        height: 3px;
+        border-radius: 1px;
+        background: rgba(0, 0, 0, 0.8);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        transition: all 0.4s ease;
+    }
+    
+    .menu-wrap .hamburger > div::before, .menu-wrap .hamburger > div::after{
+        content: '';
+        position: absolute;
+        z-index: 9997;
+        top: -8px;
+        width: 100%;
+        height: 3px;
+        border-radius: 1px;
+        background: inherit;
+    }
+    .menu-wrap .hamburger > div::after{
+        top: 8px;
+    }
+    
+    .menu-wrap .toggler:checked + .hamburger > div {
+        transform: rotate(135deg);
+    }
+    
+    .menu-wrap .toggler:checked + .hamburger > div::before, .menu-wrap .toggler:checked + .hamburger > div::after { 
+        top: 0;
+        transform: rotate(90deg);
+    }
+    .menu-wrap .toggler:checked:hover + .hamburger > div {
+        transform: rotate(225deg);
+    }
+    
+    .menu-wrap .toggler:checked ~ .menu {
+        visibility: visible;
+    }
+    .menu-wrap .toggler:checked ~ .menu > div {
+        transform: scale(1);
+        transition-duration: 0.5s;
+    }
+    .menu-wrap .toggler:checked ~ .menu > div > div {
+        opacity: 1;    
+        transition: opacity 0.1s ease 0.1s;
+    }
+    
+    .menu-wrap .menu{
+        position: fixed;
+        top: 0;
+        right: 0;
+        width: 100%;
+        height: 100%;
+        visibility: hidden;
+        overflow: hidden;
+        display: flex;
+        align-items: top;
+        justify-content: flex-end;
+    }
+    .menu-wrap .menu > div{
+        background: rgba(254, 177, 82, 0.7);
+        height: 100%;
+        width: 100%;
+        display: flex;
+        flex: none;
+        align-items: center;
+        justify-content: center;
+        transition: all 0.2s ease-in-out;
+    }
+    .menu-wrap .menu > div > div{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+        height: 100%;
+        /* padding: 10px; */
+        background: rgba(254, 177, 82, 1);
+        opacity: 0;
+        transition: opacity 0.2s ease-in-out;
+    }
+    
+    .menu-wrap .menu >div >div >ul{
+        text-align: center;
+        list-style: none;
+        font-size: 30px;
+        padding: 10px;
+    }
+    .menu-wrap .menu >div >div >ul>li{
+        text-decoration: none;
+        list-style: none;
+        font-size: 30px;
+        padding: 10px;
+    }
+    .hamburger-router-link{
+        text-decoration: none;
+        color: black;
+    }
+    
+    #main-header-nav{
+        display: none;
+    }
 }
 
 @media (max-width: 500px){
