--- a/src/Footer.css
+++ b/src/Footer.css
@@ -13,7 +13,7 @@
 .footer-link{
     color: gray;
     font-size: 30px;
-    margin: 10px;
+    margin-right: 30px;
 }
 .footer-credentials{
     text-align: left;
@@ -23,6 +23,8 @@
 }
 .footer-nav{
     margin-right: 200px;
+    display: flex;
+    justify-content: center;
 }
 
 
