--- a/src/ContactForm.css
+++ b/src/ContactForm.css
@@ -100,6 +100,9 @@
     /* justify-content: start;
     align-items: flex-start; */
 }
+.g-recaptcha{
+    margin: 10px;
+}
 
 
 @media (max-width:768px){
