--- a/src/ContactForm.css
+++ b/src/ContactForm.css
@@ -2,6 +2,7 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-gap: 40px;
+    align-items: center;
 }
 
 
@@ -61,6 +62,7 @@
     padding: 20px;
     text-align: start;
     margin-right: 100px;
+    width: 100%;
 }
 .contactForm-label{
     font-size: 20px;
@@ -102,6 +104,25 @@
 }
 .g-recaptcha{
     margin: 10px;
+}
+
+
+/* .contact-wrapper{
+    position: relative;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 0 auto; 
+} */
+.mailer-anim-container{
+    font-size: 40px;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    margin-right: 150px;
 }
 
 
