--- a/src/Experience.css
+++ b/src/Experience.css
@@ -20,9 +20,24 @@
 }
 .experience-title-wrapper{
     padding: 20px;  
+    display: flex;
+    flex-flow: column;
+    align-items: left;
+    width: fit-content;
 }
 .experience-title-container{
-    padding-top: 20px;  
+    padding-top: 20px; 
+    text-align: left;
+}
+.experience-select-button{
+    margin: 0;
+    padding: 0;
+    border: none;
+    background: none;
+    font-family: inherit;
+}
+.experience-select-button:focus{
+    outline: none;
 }
 .experience-title-text{
     margin: 0;
