--- a/src/ExpComponents/ExpGA.css
+++ b/src/ExpComponents/ExpGA.css
@@ -7,7 +7,10 @@
     /* grid-template-columns: 1fr 1fr; */
     align-items: center;
 }
-
+.experience-internal-link{
+    display: inline;
+    font-size: 25px;
+}
 
 @media (max-width:768px){
    
