--- a/src/Experience.css
+++ b/src/Experience.css
@@ -28,43 +28,48 @@
 .experience-title-container{
     padding-top: 20px; 
     text-align: left;
+    padding: 20px;
 }
 .experience-select-button{
-    margin: 0;
+    margin: 5px;
     padding: 0;
     border: none;
     background: none;
     font-family: inherit;
+    background:  rgba(254, 177, 82, 0.7);
+    box-shadow: 2px 2px 2px rgb(125, 125, 125);
+    border-radius: 7px;
+}
+
+.experience-select-button:hover{
+    background:  rgba(192, 192, 192, 0.7);
 }
 .experience-select-button:focus{
     outline: none;
+    box-shadow: none;
+    background:  rgba(192, 192, 192, 0.7);
 }
 .experience-title-text{
     margin: 0;
     padding-top: 20px;
-    font-size: 18px;
+    font-size: 15px;
     color: rgb(73, 73, 73);
 }
-.experience-text{
-    margin: 0;
-    padding-top: 20px;
-    font-size: 20px;
-}
+
 .experience-sub-heading{
     margin: 0;
     padding-top: 20px;
     font-size: 20px;
 }
 
-
-
 .experience-description-right-wrapper{
     border: 1px solid rgba(254, 177, 82, 0.9);
     border-radius: 10px;
     padding: 20px;
-    margin-top: 50px;
+    margin-top: 85px;
     margin-right: 100px;
 }
+
 
 @media (max-width:768px){
     .experience-container{
