--- a/src/EduComponents/EduGEN.css
+++ b/src/EduComponents/EduGEN.css
@@ -1,10 +1,10 @@
-.experience-text{
+.education-text{
     margin: 0;
     padding-top: 20px;
     font-size: 18px;
 }
 @media (max-width:768px){
-    .experience-instruction{
+    .education-instruction{
         display: none;
     }
 }
