--- a/src/Education.css
+++ b/src/Education.css
@@ -1,11 +1,14 @@
 *{
     box-sizing: border-box;
 }
-.education-container{
+.education-web-view-wrapper{
     height: 100vh;
     display: grid;
     grid-template-columns: 1fr 1fr;
     align-items: center;
+}
+.education-mobile-view-wrapper{
+    display: none;
 }
 .education-text-left-container{
     width: 100%;
@@ -18,46 +21,40 @@
     font-size: 40px;
     padding: 20px;
 }
+.education-instruction-mobile-view{
+    display: none;
+}
 .education-title-wrapper{
     padding: 20px;
     display: flex;
     flex-flow: column;
-    align-items: left;
     width: fit-content;
 }
 .education-title-container{
-    padding-top: 20px; 
     text-align: left;
-    padding: 20px;
-    
+    padding: 20px; 
 }
 .education-select-button{
+    margin: 5px;
     padding: 0;
     border: none;
     background: none;
     font-family: inherit;
-    margin: 5px;
     background:  rgba(254, 177, 82, 0.7);
     box-shadow: 2px 2px 2px rgb(125, 125, 125);
     border-radius: 7px;
 }
 .education-title-text{
     margin: 0;
-    padding-top: 20px;
-    font-size: 18px;
+    padding: 10px;
+    font-size: 15px;
     color: rgb(73, 73, 73);
-}
-.education-text{
-    margin: 0;
-    padding-top: 20px;
-    font-size: 20px;
 }
 .education-sub-heading{
     margin: 0;
-    padding-top: 20px;
+    padding: 10px;
     font-size: 20px;
 }
-
 .education-select-button:hover{
     background:  rgba(192, 192, 192, 0.7);
 }
@@ -66,34 +63,52 @@
     box-shadow: none;
     background:  rgba(192, 192, 192, 0.7);
 }
-
-
 .education-description-right-wrapper{
     border: 1px solid rgba(254, 177, 82, 0.9);
     border-radius: 10px;
     padding: 20px;
-    margin-top: 50px;
+    margin-top: 85px;
     margin-right: 100px;
 }
 
 @media (max-width:768px){
-    .education-container{
-        padding-top: 30px;
-        grid-template-columns: none;
+    .education-web-view-wrapper{
+        display: none;
+    }
+    .education-mobile-view-wrapper{
+        height: 100vh;
+        display: grid;
         grid-template-rows: 1fr 1fr;
+        align-items: center;
     }
     .education-heading{
         padding: 0;
-        padding-top: 30px;
+        margin-top: 60px;
+        font-size: 30px;
+        padding-top: 10px;
+        padding-left: 10px;
+        padding-bottom: 10px;
     }
-    .education-text-left-container{
-        margin-left: 20px;
-    } 
-    .education-description-right-wrapper{
-        margin-left: 10px;
-        margin-right: 10px;
+    .education-instruction-mobile-view{
+        display: flex;
+        padding-left: 10px;
+        padding-bottom: 10px;
     }
     .education-title-wrapper{
-        padding: 0;  
+        padding: 0;
+        padding-left: 10px;  
+    }
+    .education-title-container{
+        padding: 10px;
+    }
+    .education-text-left-container{
+        margin: 0;   
+    } 
+    .education-description-right-wrapper{
+        padding: 7px;
+        margin-left: 10px;
+        margin-right: 10px;
+        margin-top: 10px;
+        margin-bottom: 10px;
     }
 }
