--- a/src/Education.css
+++ b/src/Education.css
@@ -103,6 +103,7 @@
     }
     .education-text-left-container{
         margin: 0;   
+        margin-bottom: 50px;      
     } 
     .education-description-right-wrapper{
         padding: 7px;
