--- a/src/Experience.css
+++ b/src/Experience.css
@@ -105,6 +105,7 @@
     }
     .experience-text-left-container{
         margin: 0;   
+        margin-bottom: 50px;   
     } 
     .experience-description-right-wrapper{
         padding: 7px;
