--- a/src/Header.css
+++ b/src/Header.css
@@ -1,12 +1,21 @@
-
-.logo{
-    font-family: 'Cedarville Cursive', cursive;
+.log-wrapper{
     margin: 0;
-    margin-left: 20px;
-    padding-left: 3px;
-    font-size: 30px;
+    background: rgba(254, 177, 82, 0.9);
+    width: fit-content;
+    text-align: center;
+    border-radius: 50%;
+    margin-top: 5px;
+    margin-left: 15px;
+}
+.logo{
+    font-family: 'Thasadith', sans-serif;
+    margin: 0;
+    padding: 10px;
+    /* margin-left: 20px;
+    padding-left: 3px; */
+    font-size: 20px;
     text-align: left;
-    color: rgba(55, 67, 235, 0.9);
+    /* color: rgba(55, 67, 235, 0.9); */
 }
 .fixed-header{
     position: fixed;
