--- a/src/Header.css
+++ b/src/Header.css
@@ -1,21 +1,41 @@
-.log-wrapper{
-    margin: 0;
-    background: rgba(254, 177, 82, 0.9);
-    width: fit-content;
-    text-align: center;
-    border-radius: 50%;
-    margin-top: 5px;
-    margin-left: 15px;
+*{
+    box-sizing: border-box;
 }
 .logo{
-    font-family: 'Thasadith', sans-serif;
+    font-family: 'Kanit', sans-serif;
     margin: 0;
-    padding: 10px;
-    /* margin-left: 20px;
-    padding-left: 3px; */
-    font-size: 20px;
+    margin-top: 10px;
+    margin-left: 20px;
+    color: rgb(255, 147, 15);
+    font-weight: bolder;
+    padding: 5px;
+    font-size: 19px;
     text-align: left;
-    /* color: rgba(55, 67, 235, 0.9); */
+    letter-spacing: 0.3em;
+}
+.logo-letter-wrapper{
+    display: inline-block;
+    position: relative;
+    white-space: nowrap;
+}
+.logo-letter-wrapper:after {
+    content: '';
+    height: 1.3px;
+    width: 0%;
+    position: absolute;
+    top: 50%;
+    left: 110%;
+    background-color: #000;
+    transition: width 500ms, left 500ms;
+    transition-property: width, left;
+    transition-duration: 500ms, 500ms;
+    transition-timing-function: ease, ease;
+    transition-delay: 0s, 0s;
+}
+.logo-letter-wrapper:hover::after{
+    width:120%;
+    left:-10%;
+    transition: width 500ms;
 }
 .fixed-header{
     position: fixed;
