--- a/src/Portfolio.css
+++ b/src/Portfolio.css
@@ -111,6 +111,19 @@
     padding: 5px;
     color: black;
 }
+.portfolio-item-text-uidpw{
+    margin: 0;
+    font-size: 15px;
+    text-align: center;
+    margin-bottom: 10px;
+}
+.portfolio-item-text-poll{
+    margin: 0;
+    text-align: center;
+    margin-top: 15px;
+    margin-bottom: 15px;
+    padding: 5px;
+}
 .portfolio-demo-link{
     text-decoration: none;
     color: black;
